--- a/_posts/2022-08-04-my-project-3.md
+++ b/_posts/2022-08-04-my-project-3.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "My project 3"
-date:   2022-08-04
-author: Project Author
-description: This is a cool project
+date:   2022-09-28
+author: Courtney Hiatt
+description: When is it appropriate to use linear regression? This post will guide you through the assumptions your data needs to pass in order to be confident in your linear regression analysis.
 image: 
 ---
 
