--- a/_posts/2022-09-28-my-project-3.md
+++ b/_posts/2022-09-28-my-project-3.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "My project 3"
+title:  "My Tutorial"
 date:   2022-09-28
 author: Courtney Hiatt
 description: When is it appropriate to use linear regression? This post will guide you through the assumptions your data needs to pass in order to be confident in your linear regression analysis.
-image: 
+image: /assets/images/linearregression.png
 ---
 
 Blog content
