updated date to take it off blog

--- a/_posts/2022-11-09-ethics.md
+++ b/_posts/2022-11-09-ethics.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "My project 1"
-date:   2022-08-02
-author: Project Author
+title:  "Ethics"
+date:   2022-11-09
+author: Courtney Hiatt
 description: This is a cool project.
 image: 
 ---
