--- a/_posts/2022-09-28-my-project-3.md
+++ b/_posts/2022-09-28-my-project-3.md
@@ -7,5 +7,16 @@ description: When is it appropriate to use linear regression? This post will gui
 image: /assets/images/linearregression.png
 ---
 
-Blog content
+So you have a dataset that you want to run a linear regression model on. Great! Before beginning, you’ll want to check a few things to understand your data better and ensure your inferences and predictions will be accurate and precise.
+
+## What assumptions does a linear regression model make?
+
+First, let’s begin with the assumptions we make when we use a linear regression model. Luckily for us, our assumptions create an easy acronym:
+
+Linearity
+Independence
+Normality
+Equal Variance
+
+### Linearity
 
