--- a/_posts/2022-09-28-my-project-3.md
+++ b/_posts/2022-09-28-my-project-3.md
@@ -7,6 +7,10 @@ description: When is it appropriate to use linear regression? This post will gui
 image: /assets/images/linearregression.png
 ---
 
+A linear regression model is a powerful tool to analyze data and use it to form predictions and inferences about the world around us. Linear regression works great for a continuous response variable with one or more predictor variables. The general equation for a linear model is: 
+
+$y = \beta_0+\Sigma\beta_iX_i+\epsilon_i$
+
 So you have a dataset that you want to run a linear regression model on. Great! Before beginning, you’ll want to check a few things to understand your data better and ensure your inferences and predictions will be accurate and precise.
 
 ## What assumptions does a linear regression model make?
@@ -19,4 +23,5 @@ Normality
 Equal Variance
 
 ### Linearity
+
 
