--- a/_posts/2022-09-28-my-project-3.md
+++ b/_posts/2022-09-28-my-project-3.md
@@ -9,7 +9,10 @@ image: /assets/images/linearregression.png
 
 A linear regression model is a powerful tool to analyze data and use it to form predictions and inferences about the world around us. Linear regression works great for a continuous response variable with one or more predictor variables. The general equation for a linear model is: 
 
-<p align="center"><font size="+2">$y = \beta_0+\Sigma\beta_iX_i+\epsilon_i$</font></p>
+<p align="center">
+  \scalebox{2}{%
+  $y = \beta_0+\Sigma\beta_iX_i+\epsilon_i$}
+</p>
 
 So you have a dataset that you want to run a linear regression model on. Great! Before beginning, you’ll want to check a few things to understand your data better and ensure your inferences and predictions will be accurate and precise.
 
@@ -17,10 +20,13 @@ So you have a dataset that you want to run a linear regression model on. Great! 
 
 First, let’s begin with the assumptions we make when we use a linear regression model. Luckily for us, our assumptions create an easy acronym:
 
-Linearity
-Independence
-Normality
-Equal Variance
+**L**inearity
+
+**I**ndependence
+
+**N**ormality
+
+**E**qual Variance
 
 ### Linearity
 
