--- a/_posts/2022-09-28-my-project-3.md
+++ b/_posts/2022-09-28-my-project-3.md
@@ -77,7 +77,7 @@ When your data does not have equal variance, your model is much more likely to d
 
 <p style="text-align:center;"><img src="https://github.com/courtneyhiatt/stat386-projects/raw/main/assets/images/equalvar.png" alt="" style="width:400px;"/></p>
 
-### What to do if your assumptions are broken
+## What to do if your assumptions are broken
 
 These assumptions are frequently broken with real life data. So where can you go from there? As a data scientist, it is up to you to decide how to deal with unmet assumptions in the data you work with, but there are plenty of tools and guidelines at your disposal. This <a href="https://www.statology.org/linear-regression-assumptions/">blog post</a> goes through a few things you can try in order to fit a model for your data. 
 
